# claude-runner-python

./: LICENSE  README.md  pyproject.toml
assets/tapes/: demo-1-quickstart.tape  demo-2-streaming.tape
examples/: chatbot.py  code_reviewer.py  fastapi_agent.py
src/claude_runner/: __init__.py  api_runner.py  cli.py  mcp.py  models.py  permissions.py  runner.py  tools.py  types.py
src/claude_runner/sandbox/: __init__.py
tests/: test_mcp.py  test_models.py  test_permissions.py  test_runner.py  test_tools.py
