[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-runner-py"
version = "0.1.1"
description = "The easiest way to build AI agents with Claude. CLI, SDK, and Cloud — 5 lines to start."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Santhosh Dhandapani" },
]
keywords = ["claude", "agent", "ai", "sdk", "mcp", "anthropic", "runner", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Zero required deps — install what you need
dependencies = []

[project.optional-dependencies]
api = ["anthropic>=0.87.0"]
agent = ["claude-agent-sdk>=0.1.56"]
e2b = ["e2b>=1.0.0"]
all = ["anthropic>=0.87.0", "claude-agent-sdk>=0.1.56", "e2b>=1.0.0"]

[project.scripts]
claude-runner = "claude_runner.cli:main"

[project.urls]
Homepage = "https://github.com/SanthoshDhandapani/claude-runner-python"
Repository = "https://github.com/SanthoshDhandapani/claude-runner-python"
Documentation = "https://github.com/SanthoshDhandapani/claude-runner-python#readme"
Issues = "https://github.com/SanthoshDhandapani/claude-runner-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
